--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 
-		<slf4j.version>1.7.24</slf4j.version>
+		<slf4j.version>1.7.25</slf4j.version>
 		<logback.version>1.2.1</logback.version>
 
 		<mysql.version>5.1.41</mysql.version>
@@ -31,13 +31,16 @@
 		<servlet.version>3.0.1</servlet.version>
 		<jspapi.version>2.3.1</jspapi.version>
 		<jstl.version>1.2</jstl.version>
-		
+
 		<maven.checkstyle.version>2.17</maven.checkstyle.version>
 		<maven.surefire.version>2.20</maven.surefire.version>
 		<maven.failsafe.version>2.20</maven.failsafe.version>
 		<maven.war.version>2.6</maven.war.version>
 		<maven.tomcat7.version>2.2</maven.tomcat7.version>
 		<cargo.maven2.version>1.4.16</cargo.maven2.version>
+
+		<spring-framework.version>4.0.2.RELEASE</spring-framework.version>
+
 	</properties>
 
 	<dependencies>
@@ -59,12 +62,24 @@
 			<version>${logback.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql.version}</version>
 			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>${mariadb.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
@@ -132,8 +147,8 @@
 			<version>${selenium.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
-		
+
+
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -156,6 +171,44 @@
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
 		</dependency>
+
+		<!-- Spring and Transactions -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring-framework.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>${spring-framework.version}</version>
+		</dependency>
+
+		<!-- Spring JDBC Support -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${spring-framework.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring-framework.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+
+
+
 	</dependencies>
 
 	<build>
@@ -194,13 +247,13 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>${maven.tomcat7.version}</version>
 				<configuration>
-					<url>http://172.18.0.3:8080/manager/text</url>
+					<url>http://localhost:8080/manager/text</url>
 					<server>Tomcat8Server</server>
 					<username>deployer</username>
 					<password>deployer</password>
 				</configuration>
 			</plugin>
-			
+
 			<!-- Exclude integration tests from testing phase -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -233,7 +286,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<!-- Start Tomcat with war during pre-integration tests and shut it down 
 				during post-integration tests -->
 			<plugin>
