--- a/ComputerDatabase-console/pom.xml
+++ b/ComputerDatabase-console/pom.xml
@@ -21,5 +21,10 @@
 			<artifactId>ComputerDatabase-service</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+		</dependency>
 	</dependencies>
 </project>
