--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.excilys.mlemaile.cdb</groupId>
 	<artifactId>ComputerDatabase</artifactId>
-	<version>2.0-RELEASE</version>
+	<version>2.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>ComputerDatabase</name>
@@ -75,15 +75,16 @@
 				<artifactId>jcl-over-slf4j</artifactId>
 				<version>${slf4j.version}</version>
 			</dependency>
-
+			
 			<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-			<dependency>
+			<!-- <dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
 				<version>${mysql.version}</version>
 				<scope>runtime</scope>
 			</dependency>
-
+			 -->
+			
 			<dependency>
 				<groupId>org.mariadb.jdbc</groupId>
 				<artifactId>mariadb-java-client</artifactId>
@@ -136,7 +137,6 @@
 				<version>${junit.version}</version>
 				<scope>test</scope>
 			</dependency>
-
 
 			<dependency>
 				<groupId>org.mockito</groupId>
@@ -230,11 +230,11 @@
 			</dependency>
 
 			<!-- Spring JDBC Support -->
-			<dependency>
+			<!-- <dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-jdbc</artifactId>
 				<version>${spring-framework.version}</version>
-			</dependency> <!-- Do we still need it ? -->
+			</dependency> --> <!-- Do we still need it ? -->
 
 			<dependency>
 				<groupId>org.springframework</groupId>
